Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "pa'vandelay.com' # 'www.vandelay.com'"
+    "page = 'vandelay.com' # 'www.vandelay.com'\n",
+    "web = \"\""
    ]
   },
   {
