Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
    "outputs": [],
    "source": [
     "page = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web = \"\""
+    "web = \"www\"\n",
+    "webpage = "
    ]
   },
   {
