--- a/index.ipynb
+++ b/index.ipynb
@@ -233,16 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "page = 'vandelay.com' # 'www.vandelay.com'\n",
     "web = \"www\"\n",
-    "webpage = "
+    "webpage = web + page\n"
    ]
   },
   {
