Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -241,7 +241,7 @@
    "source": [
     "page = 'vandelay.com' # 'www.vandelay.com'\n",
     "web = \"www\"\n",
-    "webpage = web + page\n"
+    "webpage = web + page"
    ]
   },
   {
