--- a/index.ipynb
+++ b/index.ipynb
@@ -233,15 +233,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wwwvandelay.com'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "page = 'vandelay.com' # 'www.vandelay.com'\n",
     "web = \"www\"\n",
-    "webpage = web + page"
+    "webpage = web + page\n",
+    "webpage"
    ]
   },
   {
