Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,9 @@
    },
    "outputs": [],
    "source": [
-    "phone_number = \"7285553334\" # 728"
+    "phone_number = \"7285553334\" # 728\n",
+    "\n",
+    "area_code = ph"
    ]
   },
   {
