Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "source": [
     "phone_number = \"7285553334\" # 728\n",
     "\n",
-    "area_code = ph"
+    "area_code = phone_number[]"
    ]
   },
   {
