--- a/index.ipynb
+++ b/index.ipynb
@@ -272,15 +272,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
     "\n",
-    "area_code = phone_number[]"
+    "area_code = phone_number[:3]"
    ]
   },
   {
