Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,13 +272,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'728'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
     "\n",
-    "area_code = phone_number[:3]"
+    "area_code = phone_number[:3]\n",
+    "area_code"
    ]
   },
   {
